examples/invalid/duplicate_class.atom
class Test {
    let value1;
}

class Test {
    let value2;
}

fn main() {
}
